[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -74,7 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Un tèma novèl s'es installat.
 lwthemePostInstallNotification.undoButton=Anullar
-lwthemePostInstallNotification.undoButton.accesskey=A
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Gerir los tèmas…
 lwthemePostInstallNotification.manageButton.accesskey=G
 
@@ -98,12 +98,8 @@ popupWarningDontShowFromMessage=Visualizar pas aqueste messatge quand se blòcan
 popupWarningDontShowFromLocationbar=Afichar pas la barra d'informacion quand se blòcan de fenèstras sorgissentas
 popupShowPopupPrefix=Visualizar '%S'
 
-# missing plugin installer
-installPlugin.message = Volètz installar lo plugin necessari per afichar totes los elements d'aquesta pagina ?
-installPlugin.button.label=Installar %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Demandar pas mai
-installPlugin.ignoreButton.accesskey=n
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 crashedpluginsMessage.title=Lo plugin %S a plantat.
 crashedpluginsMessage.reloadButton.label=Actualizar la pagina
@@ -117,7 +113,9 @@ crashedpluginsMessage.learnMore=Ne saber mai…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.goTo.accesskey=Y
 keywordURIFixup.dismiss=Non, mercé
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -269,6 +267,7 @@ newWindowButton.tooltip=Dobrir una fenèstra novèla (%S)
 # New Tab button tooltip
 # LOCALIZATION NOTE (newTabButton.tooltip):
 # %S is the keyboard shortcut for "New Tab"
+newTabButton.tooltip=Dobrir un onglet novèl (%S)
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
@@ -439,6 +438,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Volètz installar « %1$S » a partir del site (%2$S) ?
 webapps.install.success = Aplicacion installada
 webapps.install.inprogress = Installacion en cors
+webapps.uninstall = Desinstallar
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall = Installar pas
+webapps.doNotUninstall.accesskey = D
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Volètz desinstallar «%1$S» ?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=Ara, %S es afichat en mòde ecran complet.
@@ -499,14 +504,24 @@ getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S
 getUserMedia.shareScreen.message = Volètz partejar vòstra ecran amb %S ?
 getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
 getUserMedia.shareScreenAndMicrophone.message = Volètz partejar vòstre microfòn e  vòstre ecran amb %S ?
+getUserMedia.selectScreen.label=Ecran de partejar :
+getUserMedia.selectScreen.accesskey=c
 getUserMedia.noVideo.label = Pas cap de vidèo
 getUserMedia.noAudio.label = Pas cap d'àudio
+getUserMedia.shareEntireScreen.label = Ecran complet
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 fenèstra);#1 (#2 fenèstras)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = Partejar lo periferic seleccionat;Partejar los periferics seleccionats
 getUserMedia.shareSelectedDevices.accesskey = P
+getUserMedia.shareScreen.label = Partejat l'ecran
 getUserMedia.always.label = Partejar totjorn
 getUserMedia.always.accesskey = t
 getUserMedia.denyRequest.label = Partejar pas
@@ -523,13 +538,24 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Arrestar lo partiment
 getUserMedia.stopSharing.accesskey = s
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S a blocat de contengut pas securizat.
-mixedContentBlocked.keepBlockingButton.label = Contunhar lo blocatge
-mixedContentBlocked.keepBlockingButton.accesskey = b
-mixedContentBlocked.unblock.label = Desactivar la proteccion per aquesta pagina
-mixedContentBlocked.unblock.accesskey = D
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S sembla lent… d'… aviar.
@@ -545,3 +571,9 @@ slowStartup.disableNotificationButton.accesskey = a
 customizeTips.tip0 = %1$S : Podètz personalizar %2$S per que s'adapte a vos. Fasètz simplament lisar un dels elements çaijós dins lo menú o la barra d'aisinas. %3$S suls biaisses de personalizar %2$S.
 customizeTips.tip0.hint = Astúcia
 customizeTips.tip0.learnMore = Ne saber mai
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = Tornar aviar %S
