--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Los cookies seguents son emmagazinats sus vòstre ordenador :
 cookiesFiltered=Los cookies seguents correspondon a vòstra recèrca :
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Suprimir las donadas sens connexion del site
 offlineAppRemovePrompt=Quand auretz suprimit aquestas donadas, %S serà pas pus disponible sens connexion. Sètz segur que volètz suprimir aqueste site web sens connexion ?
 offlineAppRemoveConfirm=Suprimir las donadas sens connexion
