--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -7,16 +7,16 @@ screenReaderStarted = Lector d'ecran aviat
 screenReaderStopped = Lector d'ecran arrestat
 
 # Roles
-menubar        =       barra de menús
+menubar        =       barra de menú
 scrollbar      =       barra de desfilament
 grip           =       punhada
-alert          =       Alèrta
+alert          =       alèrta
 menupopup      =       menú popup
 document       =       document
 pane           =       panèl
 dialog         =       dialòg
 separator      =       separador
-toolbar        =       Barra d'aisinas
+toolbar        =       barra d'aisinas
 statusbar      =       barra d'estat
 table          =       tablèu
 columnheader   =       entèsta de colomna
@@ -27,15 +27,15 @@ cell           =       cellula
 link           =       ligam
 list           =       lista
 listitem       =       element de lista
-outline        =       plan
-outlineitem    =       element de plan
+outline        =       contorn
+outlineitem    =       element de contorn
 pagetab        =       tabulacion
-propertypage   =       proprietat de pagina
+propertypage   =       pagina de proprietats
 graphic        =       grafic
 pushbutton     =       boton
 checkbutton    =       casa de marcar
 radiobutton    =       boton ràdio
-combobox       =       lista desenrotlanta
+combobox       =       quadre combinat
 progressbar    =       barra de progression
 slider         =       cursor
 spinbutton     =       boton de doas posicions
@@ -45,9 +45,9 @@ equation       =       eqüacion
 buttonmenu     =       boton de menú
 whitespace     =       espaci
 pagetablist    =       lista d'onglets
-canvas         =       canvas
-checkmenuitem  =       element de menú de marcar
-label          =       libellat
+canvas         =       canevàs
+checkmenuitem  =       element de menú seleccionable
+label          =       etiqueta
 passwordtext   =       tèxte de senhal
 radiomenuitem  =       element de menú amb boton ràdio
 textcontainer  =       contenidor de tèxte
@@ -56,18 +56,18 @@ treetable      =       arborescéncia
 header         =       entèsta
 footer         =       pè de pagina
 paragraph      =       paragraf
-entry          =       Entrada
+entry          =       entrada
 caption        =       legenda
 heading        =       títol
 section        =       seccion
 form           =       formulari
-comboboxlist   =       lista desenrotlanta
-comboboxoption =       opcion de lista desenrotlanta
+comboboxlist   =       lista de quadre combinat
+comboboxoption =       opcion de quadre combinat
 imagemap       =       imatge decopat
 listboxoption  =       opcion
-listbox        =       lista
-flatequation   =       eqüacion
-gridcell       =       cellula
+listbox        =       quadre de lista
+flatequation   =       eqüacion plana
+gridcell       =       cellula de grasilha
 note           =       nòta
 figure         =       illustracion
 definitionlist =       lista de definicions
@@ -94,11 +94,10 @@ listEnd        =       element de lista
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       Un element;#1 elements
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S sus %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S sus %2$S
 
 # Landmark announcements
 banner         =       bandièra
@@ -108,17 +107,14 @@ main           =       principal
 navigation     =       navigacion
 search         =       recercar
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S amb %S e %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 colomna;#1 colomnas
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = amb 1 colomna;amb #1 colomnas
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 linha;#1 linhas
+tblRowInfo = i 1 linha;i #1 linhas
 
 # table or grid cell information
 columnInfo = Colomna %S
@@ -161,6 +157,7 @@ statePressed     =    quichat
 stateExpanded    =    desvolopat
 stateCollapsed   =    reduch
 stateUnavailable =    indisponible
+stateReadonly    =    en lectura sola
 stateRequired    =    requesit
 stateTraversed   =    visitat
 stateHasPopup    =    possedís un popup
@@ -190,18 +187,85 @@ quicknav_Table       = Tablèus
 quicknav_Checkbox    = Casas de marcar
 
 # Shortened role names for braille
-linkAbbr           =       ligam
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       txtsenhal
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       zòna de tèxte
+menubarAbbr        =       barra de menú
+scrollbarAbbr      =       barra de desfilament
+gripAbbr           =       punhada
+alertAbbr          =       alèrta
+menupopupAbbr      =       menú popup
+documentAbbr       =       document
+paneAbbr           =       panèl
+dialogAbbr         =       dialòg
+separatorAbbr      =       separador
+toolbarAbbr        =       barra d'aisinas
+statusbarAbbr      =       barra d'estat
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       entèsta de colomna
+rowheaderAbbr      =       entèsta de linha
+columnAbbr         =       colomna
+rowAbbr            =       linha
+cellAbbr           =       cellula
+linkAbbr           =       ligam
+listAbbr           =       lista
+listitemAbbr       =       element de lista
+outlineAbbr        =       contorn
+outlineitemAbbr    =       element de contorn
+pagetabAbbr        =       tabulacion
+propertypageAbbr   =       pagina de proprietat
+graphicAbbr        =       grafic
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       boton de marcar
+radiobuttonAbbr    =       boton ràdio
+comboboxAbbr       =       quadre combinat
+progressbarAbbr    =       barra de progression
+sliderAbbr         =       cursor
+spinbuttonAbbr     =       boton de doas posicions
+diagramAbbr        =       diagrama
+animationAbbr      =       animacion
+equationAbbr       =       eqüacion
+buttonmenuAbbr     =       boton de menú
+whitespaceAbbr     =       espaci en blanc
+pagetablistAbbr    =       lista d'onglets
+canvasAbbr         =       canevàs
+checkmenuitemAbbr  =       element de menú seleccionable
+labelAbbr          =       etiqueta
+passwordtextAbbr   =       txtsenhal
+radiomenuitemAbbr  =       element de menú amb boton ràdio
+textcontainerAbbr  =       contenidor de tèxte
+togglebuttonAbbr   =       boton amb bascuola
+treetableAbbr      =       arborescéncia
+headerAbbr         =       entèsta
+footerAbbr         =       pè de pagina
+paragraphAbbr      =       paragraf
+entryAbbr          =       entrada
+captionAbbr        =       legenda
+headingAbbr        =       títol
+sectionAbbr        =       seccion
+formAbbr           =       formulari
+comboboxlistAbbr   =       lista de quadre combinat
+comboboxoptionAbbr =       opcion de quadre combinat
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       opcion
+listboxAbbr        =       quadre de lista
+flatequationAbbr   =       eqüacion plana
+gridcellAbbr       =       cellula de grasilha
+noteAbbr           =       nòta
+figureAbbr         =       fig
+definitionlistAbbr =       lista de definicions
+termAbbr           =       tèrme
+definitionAbbr     =       definicion
+textareaAbbr       =       zòna de tèxte
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
