--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -3,20 +3,15 @@
 BlockMixedDisplayContent = Blocatge del cargament del contengut mixte pas actiu (mixed display content) « %1$S »
 BlockMixedActiveContent = Blocatge del cargament del contengut mixte actiu (mixed active content) « %1$S »
 
-# CSP
-ReportOnlyCSPIgnored=La politica CSP « report-only » serà ignorada perque d'autras politicas CSP « non-report-only » son aplicadas.
-# LOCALIZATION NOTE: Do not translate "X-Content-Security-Policy", "X-Content-Security-Policy-Report-Only",  "Content-Security-Policy" or "Content-Security-Policy-Report-Only"
-OldCSPHeaderDeprecated=Las entèstas « X-Content-Security-Policy » e « X-Content-Security-Report-Only » seràn lèu obsolètas. Utilizatz a la plaça las entèstas « Content-Security-Policy » e « Content-Security-Report-Only » que la sintaxi n'es confòrma a l'especificacion CSP.
-# LOCALIZATION NOTE: Do not translate "X-Content-Security-Policy/Report-Only" or "Content-Security-Policy/Report-Only"
-BothCSPHeadersPresent=Aqueste site a especificat a l'encòp una entèsta « X-Content-Security-Policy/Report-Only » e una entèsta « Content-Security-Policy/Report-Only ». L'entèsta « X-Content-Security-Policy/Report-Only » serà ignorada.
-
 # CORS
 CrossSiteRequestBlocked=Una demanda multioriginas (Cross-Origin Request) es estada blocada : la politica « Same Origin » permet pas de consultar la ressorsa distanta situada sus %1$S. Aquò pòt èsser corregit en desplaçant la ressorsa sul meteis domeni o en activant CORS.
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Lo site a especificat una entèsta Strict-Transport-Security invalida.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InsecurePasswordsPresentOnPage=Camps senhal presents sus una pagina pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 InsecureFormActionPasswordsPresent=Camps senhal presents dins un formulari que possedís una accion de formulari pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 InsecurePasswordsPresentOnIframe=Camps senhal presents dins una iframe pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 LoadingMixedActiveContent=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
 LoadingMixedDisplayContent=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
