--- a/toolkit/chrome/global/resetProfile.properties
+++ b/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,4 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Sembla qu'avètz pas aviat %S dempuèi un pichon moment. Lo volètz netejar e retrobar un perfil coma nòu ? Al fach, urós de vos retrobar !
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Reïnicializar %S…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
