[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/aboutPrivateBrowsing.properties
+++ b/browser/chrome/browser/aboutPrivateBrowsing.properties
@@ -2,4 +2,5 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-chooseFileDialogTitle=Causir un fichièr
+title=Sètz a navigar d'un biais privat
+title.normal=Dobrir una fenèstra de navigacion &privada ?
