--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -291,7 +291,6 @@ identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat pe
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=La connexion a aqueste site internet es securizada.
-identity.mixed_display_loaded=La connexion cap a aqueste site es pas completament securizada perque possedís d'elements pas chifrats (tals coma d'imatges).
 identity.mixed_active_loaded2=Aqueste site possedís de contengut interactiu pas chifrat (tal coma d'escripts). Qual que siá es en mesura d'afichar vòstras informacions o de modificar lo comportament del site web.
 identity.unencrypted=Vòstra connexion a aqueste site es pas chifrada.
 
@@ -367,10 +366,9 @@ safebrowsing.notAnAttackButton.label=Aqueste site es pas malvolent…
 safebrowsing.notAnAttackButton.accessKey=A
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Afichar los #1 onglets
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
