--- a/browser/chrome/browser/devtools/projecteditor.properties
+++ b/browser/chrome/browser/devtools/projecteditor.properties
@@ -45,6 +45,11 @@ projecteditor.deleteFilePromptMessage=Sètz segur(a) que volètz suprimir aquest
 # the directory.
 projecteditor.newLabel=Novèl...
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=Tornar nomenar
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Enregistrar
