--- a/browser/chrome/browser/downloads/downloads.properties
+++ b/browser/chrome/browser/downloads/downloads.properties
@@ -54,6 +54,7 @@ stateDirty=Blocat : Benlèu lo fichièr conten un virús o un logicial espion (s
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Sètz segur(a) que volètz desblocar aqueste fichièr ?
 unblockButtonCancel=La perdatz pas
 
 # LOCALIZATION NOTE (sizeWithUnits):
