--- a/browser/chrome/browser/shellservice.properties
+++ b/browser/chrome/browser/shellservice.properties
@@ -12,6 +12,12 @@ setDefaultBrowserOptions.accesskey = O
 setDefaultBrowserNever.label       = Demandar pas mai
 setDefaultBrowserNever.accesskey   = p
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navigador per defaut
+setDefaultBrowserMessage=%S es pas definit coma vòstre navigador per defaut. Ne volètz far vòstre navigador per defaut ?
+setDefaultBrowserDontAsk=Totjorn far la verificacion a l'aviada de %S.
 
 desktopBackgroundLeafNameWin=Fons d'ecran.bmp
 DesktopBackgroundDownloading=Enregistrament de l'imatge...
