--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -9,9 +9,12 @@ CrossSiteRequestBlocked=Una demanda multioriginas (Cross-Origin Request) es esta
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Lo site a especificat una entèsta Strict-Transport-Security invalida.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+# LOCALIZATION NOTE: Do not translate "SHA-1"
 InsecurePasswordsPresentOnPage=Camps senhal presents sus una pagina pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 InsecureFormActionPasswordsPresent=Camps senhal presents dins un formulari que possedís una accion de formulari pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 InsecurePasswordsPresentOnIframe=Camps senhal presents dins una iframe pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
-LoadingMixedActiveContent=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
-LoadingMixedDisplayContent=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# LOCALIZATION NOTE: Do not translate "RC4".
