--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Aquesta pagina aficha las informacions collectadas per telemetria a prepaus de las performàncias, las caracteristicas materialas, l'utilizacion de las foncionalitats e la personalizacion del navigador. Aquelas informacions son mandadas a %1$S per ajudar al melhorament de %2$S.
 
+generalDataHeadingName = Nom
+
+
 slowSqlMain = Requèstas SQL lentas dins lo fial d'execucion principal
 
 slowSqlOther = Requèstas SQL lentas dins los fials d'execucion assistents
@@ -46,7 +49,6 @@ enableTelemetry = Activar la telemetria
 
 keysHeader = Proprietat
 
-valuesHeader = Valor
 
 addonTableID = Identificant del modul
 
