--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=Per mai d'entresenhas, consultatz MDN.
 # explain the contents of the command help table.
 helpAvailable=Comandas disponiblas
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Comandas de contraròtle de la consòla
