--- a/browser/chrome/browser/devtools/storage.properties
+++ b/browser/chrome/browser/devtools/storage.properties
@@ -11,12 +11,15 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=a
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=Emmagazinatge
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
@@ -58,10 +61,18 @@ table.headers.cookies.host=Domeni
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=Clau
+table.headers.localStorage.value=Valor
 
+table.headers.sessionStorage.name=Clau
+table.headers.sessionStorage.value=Valor
 
+table.headers.indexedDB.name=Clau
+table.headers.indexedDB.value=Valor
 table.headers.indexedDB.version=Version
+table.headers.indexedDB.keyPath=Clau
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
