--- a/browser/chrome/browser/devtools/toolbox.properties
+++ b/browser/chrome/browser/devtools/toolbox.properties
@@ -77,3 +77,7 @@ options.darkTheme.label=Tèma escur
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Tèma clar
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
