--- a/browser/chrome/browser/devtools/webide.properties
+++ b/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,7 @@ project_tab_loading=Cargament...
 
 # Variable: error message (in english)
 
+
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -29,6 +30,12 @@ project_tab_loading=Cargament...
 addons_install_button=installar
 addons_uninstall_button=desinstallar
 addons_status_installed=Installat
+addons_status_preparing=preparacion
+addons_status_downloading=telecargament en cors
+addons_status_installing=installacion en cors
 
 
 # Validation status
+status_error=ERRORS
+
+# Preferences
