--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,13 @@ cannot=Blocar
 noCookieSelected=<pas cap de cookie seleccionat>
 cookiesAll=Los cookies seguents son emmagazinats sus vòstre ordenador :
 cookiesFiltered=Los cookies seguents correspondon a vòstra recèrca :
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +144,3 @@ syncUnlinkConfirm.label=Levar
 featureEnableRequiresRestart=%S deu reaviar per activar aquesta foncionalitat.
 featureDisableRequiresRestart=%S deu reaviar per activar aquesta foncionalitat.
 shouldRestartTitle=Tornar aviar %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Ligam de verificacion mandat
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Un ligam de verificacion es estat mandat a %S
-firefoxAccountVerificationSentDescription=Consultatz vòstres messatges e clicar sul ligam per aviar la sincronizacion.
