--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -7,8 +7,11 @@ addonsConfirmInstall.install=Installar
 
 # Alerts
 alertAddonsDownloading=Telecargament del modul
-alertAddonsInstalledNoRestart=Installacion acabada
 alertAddonsFail=Fracàs de l'installacion.
+alertAddonsInstalledNoRestart.message=Installacion acabada
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 alertDownloadsStart2=Telecargament aviat
 alertDownloadsDone2=Telecargaments acabats
@@ -19,6 +22,8 @@ alertDownloadsToast=Telecargament aviat...
 alertDownloadsPause=Pausa
 alertDownloadsResume=Tornar prene
 alertDownloadsCancel=Anullar
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 alertFullScreenToast=Picar sus RETORN per demorar en mòde ecran complet
 
@@ -77,7 +82,6 @@ identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat pe
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 identity.encrypted2=Connexion chifrada
-identity.ownerUnknown3=(desconegut)
 
 # Geolocation UI
 geolocation.allow=Partejar sa localizacion
@@ -106,12 +110,38 @@ contacts.dontAllow=Interdire
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Demandar pas mai per aqueste site
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of tabs
 newtabpopup.opened=Novèl onglet dobèrt;#1 novèls onglets dobèrts
 newprivatetabpopup.opened=Novèl onglet de nav. privada dobèrt;#1 novèls onglets de nav. privada dobèrts
+
+# LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+
+# Undo close tab toast
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user closes a tab. %S is the title of the tab that was closed.
+
+# LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
+# toast when the user closes a tab if there is no title to display.
+
+# LOCALIZATION NOTE (undoCloseToast.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 # Offline web applications
 offlineApps.ask=%S vòl emmagazinar de donadas sus vòstre aparelh per un usatge fòra connexion.
@@ -144,14 +174,12 @@ password.dontSave=Enregistrar pas
 # menu, set this to "true". Otherwise, you can leave it as "false".
 browser.menu.showCharacterEncoding=fals
 
-# LOCALIZATION NOTE (intl.charsetmenu.browser.static): Set to a series of comma separated
-# values for charsets that the user can select from in the Character Encoding menu.
-intl.charsetmenu.browser.static=iso-8859-1,utf-8,iso-8859-15,x-gbk,big5,iso-2022-jp,shift_jis,euc-jp
-
 # Text Selection
 selectionHelper.textCopied=Tèxte copiat dins lo quichapapièrs
 
 # Casting
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.openInNewTab=Dobrir dins un onglet novèl
@@ -173,17 +201,19 @@ contextmenu.shareImage=Enregistrar l'imatge
 # the text you have selected. %S is the name of the search engine. For example, "Google".
 contextmenu.saveImage=Enregistrar l'imatge
 contextmenu.setImageAs=Enregistrar l'imatge jos
-contextmenu.addSearchEngine=Apondre un motor de recèrca
 contextmenu.playMedia=Lectura
 contextmenu.pauseMedia=Pausa
 contextmenu.shareMedia=Partejar la vidèo
 contextmenu.showControls2=Afichar los &contraròtles
 contextmenu.saveVideo=Enregistrar la vidèo
 contextmenu.saveAudio=Enregistrar l'audio
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 contextmenu.copy=Copiar
 contextmenu.selectAll=Seleccionar tot
 contextmenu.paste=Empegar
+
 
 # Select UI
 selectHelper.closeMultipleSelectDialog=Acabat
@@ -208,16 +238,6 @@ timer.start=%S : cronomètre aviat
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
-
-# Webapps
-webapps.installTitle=Installar una aplicacion
-webapps.alertSuccess=Installacion acabada
-# Shown when there is a generic problem installing an app
-webapps.installError=Error al moment de l'installacion de l'aplicacion
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Manifèste de l'aplicacion invalid
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Impossible de telecargar lo manifèste
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S necessita un plugin. Lo volètz utilizar ?
@@ -253,6 +273,8 @@ remoteIncomingPromptCancel=Anullar
 remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Dobrir
@@ -285,4 +307,12 @@ openInApp.pageAction = Dobrir amb l'aplicacion
 openInApp.ok = D'acòrdi
 openInApp.cancel = Anullar
 
+#Tab sharing
 #Tabs in context menus
+
+# "Subscribe to page" prompts created in FeedHandler.js
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
