--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=Connexion pas criptada
 pageInfo_Privacy_None1=Lo site Web %S supòrta pas lo chiframent per la pagina actualament afichada.
 pageInfo_Privacy_None2=Las entresenhas mandadas sus Internet sens chiframent pòdon èsser vistas per d'autras personas durant lor transit.
 pageInfo_Privacy_None3=La pagina que sètz a visualizar es pas criptada.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Connexion chifrada : chiframent de naut nivèl (claus %1$S, %2$S bits)
-pageInfo_Privacy_Strong1=La pagina que vesètz es estada chifrada abans sa transmission sus Internet.
-pageInfo_Privacy_Strong2=Lo chiframent fa fòrt dificil a las personas pas autorizadas la visualizacion de la pagina durant son transit entre ordenadors. Doncas, es fòrt improbable que qualqu'un pòsca legir aquesta pagina durant son transit sus la ret.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Connexion chifrada : chiframent de bas nivèl (claus %1$S, %2$S bits)
-pageInfo_Privacy_Weak1=Lo site Web %S utiliza un chiframent de bas nivèl per la pagina que vesètz.
-pageInfo_Privacy_Weak2=Un chiframent de bas nivèl pòt permetre a cèrtas personas pas autorizadas de veire las donadas transmesas.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=La pagina que vesètz es estada chifrada abans sa transmission sus Internet.
 pageInfo_MixedContent=Connexion parcialament chifrada
-pageInfo_Privacy_Mixed1=D'unas partidas de la pagina que visionatz son pas estadas chifradas abans d'èsser transmesas sus Internet.
 
 #Cert Viewer
 certDetails=Detalhs del certificat :
@@ -151,17 +144,12 @@ writeFileUnknownError=Error desconeguda
 addExceptionBrandedWarning2=Sètz a mand de passar otra lo biais que  %S identifica aqueste sit.
 addExceptionInvalidHeader=Aqueste sit ensaja de s'identificar ele-meteis amb d'entresenhas invalidas.
 addExceptionDomainMismatchShort=Sit marrit
-addExceptionDomainMismatchLong=Lo certificat aparten a un sit diferent, aquò poiriá indicar una raubariá d'identitat.
 addExceptionExpiredShort=Entresenhas obsoletas
-addExceptionExpiredLong=Lo certificat es pas valid actualament. Es impossible de verificar s'aquesta identitat es estada senhalada coma raubada o perduda.
 addExceptionUnverifiedOrBadSignatureShort=Identitat desconeguda
-addExceptionUnverifiedOrBadSignatureLong=Lo certificat es pas segur perque es pas estat verificat per una autoritat reconeguda.
 addExceptionValidShort=Certificat valid
 addExceptionValidLong=Aqueste sit provesís una identificacion valida e certificada. Es pas necessari d'apondre una excepcion.
 addExceptionCheckingShort=Verificacion de las entresenhas
-addExceptionCheckingLong=Temptativa d'identificacion del sit…
 addExceptionNoCertShort=Pas d'entresenhas disponiblas
-addExceptionNoCertLong=Impossible d'obténer l'estat d'identificacion pel sit donat.
 addExceptionConnectionFailed=La connexion a pas capitat
 
 #Certificate Exists in database
