[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -81,11 +81,9 @@ paste-button.tooltiptext2 = Pegar (%S)
 feed-button.label = S'inscriure
 feed-button.tooltiptext2 = S'abonar a aquesta pagina
 
-# LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
+# LOCALIZATION NOTE (characterencoding-button2.label): The \u00ad text at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
-characterencoding-button.label = Encodatge dels caractèrs
-characterencoding-button.tooltiptext2 = Afichar las opcions d'encodatge de caractèrs
 
 email-link-button.label = Madar per corrièr electronic un ligam cap a la pagina…
 email-link-button.tooltiptext3 = Mandar per corrièr electronic un ligam cap a la pagina
