--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -40,6 +40,9 @@ netmonitor.tooltip=Monitor de ret
 # This string is used as an tooltip for request that failed due to security
 # issues.
 
+# LOCALIZATION NOTE (netmonitor.security.state.weak)
+# This string is used as an tooltip for request that had minor security issues
+
 # LOCALIZATION NOTE (netmonitor.security.enabled):
 # This string is used to indicate that a specific security feature is used by
 # a connection in the security details tab.
@@ -163,6 +166,10 @@ networkMenu.summary=Una requèsta, #2 Ko, #3 s;#1 requèstas, #2 Ko, #3 s
 # LOCALIZATION NOTE (networkMenu.sizeKB): This is the label displayed
 # in the network menu specifying the size of a request (in kilobytes).
 networkMenu.sizeKB=%S Ko
+
+# LOCALIZATION NOTE (networkMenu.sizeUnavailable): This is the label displayed
+# in the network menu specifying the transferred size of a request is
+# unavailable.
 
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
