--- a/browser/chrome/browser/devtools/webide.properties
+++ b/browser/chrome/browser/devtools/webide.properties
@@ -38,4 +38,4 @@ addons_status_installing=installacion en cors
 # Validation status
 status_error=ERRORS
 
-# Preferences
+# Device preferences and settings
