--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -153,8 +153,7 @@ SyncXMLHttpRequestWarning=L'utilizacion d'XMLHttpRequest de faiçon sincròna su
 ImplicitMetaViewportTagFallback=Cap de balisa meta-viewport pas trobada. Especificatz-ne una de faiçon explicita per empachar tot cambiament de comportament pas volgut provocat per de versions futuras. Consultatz https://developer.mozilla.org/fr/docs/Mozilla/Mobile/Balise_meta_viewport per mai d'informacions.
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=L'utilizacion de DataContainerEvent es depreciada. Utilizatz CustomEvent a la plaça.
-# LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
-SendAsBinaryWarning=Lo metòde non estandard sendAsBinary es obsolèt e serà lèu levat. Utilizar lo metòde estandard send(Blob data) a la plaça.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 # LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+# LOCALIZATION NOTE: Do not translate "ServiceWorker".
