--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -4,7 +4,7 @@ BlockMixedDisplayContent = Blocatge del cargament del contengut mixte pas actiu 
 BlockMixedActiveContent = Blocatge del cargament del contengut mixte actiu (mixed active content) « %1$S »
 
 # CORS
-CrossSiteRequestBlocked=Una demanda multioriginas (Cross-Origin Request) es estada blocada : la politica « Same Origin » permet pas de consultar la ressorsa distanta situada sus %1$S. Aquò pòt èsser corregit en desplaçant la ressorsa sul meteis domeni o en activant CORS.
+# LOCALIZATION NOTE: Do not translate "Access-Control-Allow-Origin", Access-Control-Allow-Credentials, Access-Control-Allow-Methods, Access-Control-Allow-Headers
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Lo site a especificat una entèsta Strict-Transport-Security invalida.
