--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -153,9 +153,6 @@ offlineApps.dontAllow2=Interdire
 # site settings dialog.
 offlineApps.storeOfflineData=Emmagazinatge de donadas fòra connexion
 
-# IndexedDB Quota increases
-indexedDBQuota.wantsTo=%S vòl emmagazinar fòrça donadas sus vòstre aparelh per un usatge fòra connexion.
-
 # LOCALIZATION NOTE (password.savePassword): Label that will be used in
  # site settings dialog.
 password.savePassword=Enregistrar lo senhal
@@ -300,7 +297,8 @@ getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam 
 getUserMedia.denyRequest.label = Paetejar pas
 getUserMedia.shareRequest.label = Partejar
 
-#Reader mode
+# LOCALIZATION NOTE (readerMode.toolbarTip):
+# Tip shown to users the first time we hide the reader mode toolbar.
 
 #Open in App
 openInApp.pageAction = Dobrir amb l'aplicacion
