--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -11,13 +11,7 @@ newCAMessage1=Volètz far fisança a « %S » per las accions seguentas ?
 unnamedCA=Autoritat de certificacion (pas de nom)
 
 #For editing cert trust
-editTrustWindowTitle=Modificar lo certificat de fisança
 editTrustCA=Lo certificat « %S » representa una autoritat de certificacion.
-editTrustEmail=Lo certificat « %S » es estat emés per :
-issuerNotTrusted=Coma fasètz pas fisança a l'autoritat qu'a emes aqueste certificat, vos cal pas far fisança dins l'autenticitat del certificat, en defòra d'una mencion contrària exprimida aicí.
-issuerTrusted=Perque fasètz fisança a l'autoritat qu'a emes aqueste certificat, fasètz fisança a l'autenticitat del certificat, en defòra d'una mencion contrària exprimida aicí.
-issuerNotKnown=Perque coneissètz pas l'autoritat qu'a emes aqueste certificat, vos cal pas far fisança a l'autenticitat del certificat, en defòra d'una mencion contrària exprimida aicí.
-issuerCertNotFound=Lo certificat per aquesta autoritat de certificacion es pas estat trobat
 
 #For Deleting Certificates
 deleteSslCertConfirm3=Volètz vertadièrament suprimir aquestas exceptions de servidors ?
@@ -45,10 +39,6 @@ chooseP12RestoreFileDialog2=Fichièr de certificat d'importar
 chooseP12BackupFileDialog=Nom de fichièr de salvagardar
 file_browse_PKCS12_spec=Fichièrs PKCS12
 
-
-#Preferences
-resetPreferences=Utilizatz aqueste boton per tornar metre las preferéncias de seguretat de %S a lors valors inicialas.
-
 #Cert verification
 certVerified=Aqueste certificat es estat verificat per las utilizacions seguentas :
 certNotVerified_CertRevoked=Impossible de verificar aqueste certificat perque es estat revocat.
@@ -65,15 +55,12 @@ clientAuthMessage1=Organizacion : "%S"
 clientAuthMessage2=Emes jos : « %S »
 
 #Page Info
-pageInfo_SiteNotVerified=Identitat del site web pas verificada
-pageInfo_WebSiteVerified=Identitat del site web verificada
-pageInfo_Identity_Verified=Lo site Web %S suporta l'autentificacion per la pagina qu'anatz veire. L'identitat del site Web es estada verificada per %S, una autoritat de certificat qu'avètz causida per aqueste prètzfach.
-pageInfo_ViewCertificate=Veire lo certificat de seguretat que verifica l'identitat del site Web.
 pageInfo_NoEncryption=Connexion pas criptada
 pageInfo_Privacy_None1=Lo site Web %S supòrta pas lo chiframent per la pagina actualament afichada.
 pageInfo_Privacy_None2=Las entresenhas mandadas sus Internet sens chiframent pòdon èsser vistas per d'autras personas durant lor transit.
 pageInfo_Privacy_None3=La pagina que sètz a visualizar es pas criptada.
-# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol and pageInfo_BrokenEncryption):
+# %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_Privacy_Encrypted1=La pagina que vesètz es estada chifrada abans sa transmission sus Internet.
@@ -82,9 +69,6 @@ pageInfo_MixedContent=Connexion parcialament chifrada
 #Cert Viewer
 certDetails=Detalhs del certificat :
 notPresent=<Fa pas partida del certificat>
-unknownIssuer=<Emeteire desconegut>
-
-escrowFinalMessage=Vos cal pas clicar sus OK que se fasètz fisança a « %S » per protegir vòstra clau privada de chiframent.
 
 #Token Manager
 password_not_set=(pas definit)
@@ -150,7 +134,6 @@ addExceptionValidShort=Certificat valid
 addExceptionValidLong=Aqueste sit provesís una identificacion valida e certificada. Es pas necessari d'apondre una excepcion.
 addExceptionCheckingShort=Verificacion de las entresenhas
 addExceptionNoCertShort=Pas d'entresenhas disponiblas
-addExceptionConnectionFailed=La connexion a pas capitat
 
 #Certificate Exists in database
 caCertExistsTitle=Lo certificat existís
