--- a/toolkit/chrome/global/browser.properties
+++ b/toolkit/chrome/global/browser.properties
@@ -8,3 +8,6 @@ browsewithcaret.checkLabel=La quichada sus F7 activa o desactiva la navigacion a
 browsewithcaret.checkButtonLabel=Òc
 
 plainText.wordWrap=Retorn a la linha automatica
+
+formPostSecureToInsecureWarning.title = Avertiment de seguretat
+formPostSecureToInsecureWarning.continue = Contunhar
