--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -56,7 +56,7 @@ notification.downloadError.retry.tooltip=Ensajar tornarmai de telecargar aqueste
 notification.installError=Una error s'es producha al moment de l'installacion de %1$S.
 notification.installError.retry=Ensajatz tornarmai
 notification.installError.retry.tooltip=Ensajar tornarmai de telecargar e installar aqueste modul complementari
-#LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
+#LOCALIZATION NOTE (notification.gmpPending) %1$S is the add-on name.
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Contribucion suggerida : %S
@@ -98,7 +98,7 @@ details.notification.install=%1$S serà installat aprèp la reaviada de %2$S.
 details.notification.uninstall=%1$S serà desinstallat aprèp la reaviada de %2$S.
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
 details.notification.upgrade=%1$S serà mes a jorn aprèp la reaviada de %2$S.
-#LOCALIZATION NOTE (details.notification.openH264Pending) OpenH264 will be automatically installed later.
+#LOCALIZATION NOTE (details.notification.gmpPending) %1$S is the add-on name
 
 # LOCALIZATION NOTE (details.experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
