--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -19,7 +19,6 @@ contextMenuSearch.accesskey=S
 
 bookmarkAllTabsDefault=[Nom de repertòri]
 
-xpinstallPromptWarning=%S a empachat lo sit (%S) de vos demandar d'installar un logicial sul vòstre ordenador.
 xpinstallPromptAllowButton=Autorizar
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
@@ -30,15 +29,21 @@ xpinstallDisabledMessage=L'installacion de programas es desactivada. Clicatz sus
 xpinstallDisabledButton=Activar
 xpinstallDisabledButton.accesskey=v
 
-# LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
+# LOCALIZATION NOTE (addonDownloadingAndVerifying):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Also see https://bugzilla.mozilla.org/show_bug.cgi?id=570012 for mockups
-addonDownloading=Telecargament del modul en cors;Telecargament dels moduls en cors
-addonDownloadCancelled=Telecargament del modul anullat.;Telecargament dels moduls anullats.
-addonDownloadRestart=Reaviar lo telecargament;Reaviar los telecargaments
-addonDownloadRestart.accessKey=R
-addonDownloadCancelTooltip=Anullar
+addonDownloadVerifying=Verificacion en cors
+
+addonInstall.cancelButton.label=Anullar
+addonInstall.cancelButton.accesskey=A
+
+# LOCALIZATION NOTE (addonConfirmInstallMessage):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is brandShortName
+# #2 is the number of add-ons being installed
+
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
 # Semicolon-separated list of plural forms. See:
@@ -62,26 +67,23 @@ addonError-4=#1 a pas pogut èsser installat perque #3 pòt pas modificar lo fic
 addonLocalError-1=Aqueste modul complementari a pas pogut èsser installat a causa d'una error del sistèma de fichièrs.
 addonLocalError-2=Aqueste modul complementari a pas pogut èsser installat perque correspond pas al modul de #3 esperat.
 addonLocalError-3=Aqueste modul complementari a pas pogut èsser installat perque sembla qu'es corromput.
-addonLocalError-4=#1 a pas pogut èsser installat perque #3 pòt pas modificar lo fichièr requesit.
 addonErrorIncompatible=#1 a pas pogut èsser installat perque es pas compatible amb #3 #4.
 addonErrorBlocklisted=#1 a pas pogut èsser installat perque presenta un grand risc de problèmas d'instabilitat o de seguretat.
+
+# LOCALIZATION NOTE (deveditionTheme.name): This should be nearly the brand name for aurora.
+# See browser/branding/aurora/locales/*/brand.properties
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Aqueste site (%S) a ensajat d'installar un tèma.
-lwthemeInstallRequest.allowButton=Autorizar
-lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Un tèma novèl s'es installat.
 lwthemePostInstallNotification.undoButton=Anullar
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Gerir los tèmas…
-lwthemePostInstallNotification.manageButton.accesskey=G
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=%S serà installat aprèp una reaviada.
-lwthemeNeedsRestart.button=Reaviar ara
 lwthemeNeedsRestart.accesskey=R
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
@@ -89,9 +91,7 @@ lwthemeNeedsRestart.accesskey=R
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
 popupWarning.message=#1 a empachat aqueste site de dobrir una fenèstra popup.;#1 a empachat aqueste site de dobrir #2 fenèstras popup.
 popupWarningButton=Opcions
-popupWarningButton.accesskey=O
 popupWarningButtonUnix=Preferéncias
-popupWarningButtonUnix.accesskey=P
 popupAllow=Autorizar las fenèstras sorgissentas de %S
 popupBlock=Blocar las fenèstras sorgissentas de %S
 popupWarningDontShowFromMessage=Visualizar pas aqueste messatge quand se blòcan de fenèstras sorgissentas
@@ -113,9 +113,7 @@ crashedpluginsMessage.learnMore=Ne saber mai…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
-keywordURIFixup.goTo.accesskey=Y
 keywordURIFixup.dismiss=Non, mercé
-keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -123,7 +121,6 @@ keywordURIFixup.dismiss.accesskey=N
 # is the site domain.
 pluginActivateNew.message=Autorizar %2$S a executar « %1$S » ?
 pluginActivateMultiple.message=Autorizar %S a executar aquestes plugins ?
-pluginActivate.learnMore=Ne saber mai…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
@@ -145,7 +142,6 @@ pluginActivateDisabled.manage=Gerir los plugins...
 pluginEnabled.message=« %S » es activat sus %S.
 pluginEnabledOutdated.message=Lo plugin obsolèt « %S » es activat sus %S.
 pluginEnabledVulnerable.message=Lo plugin vulnerable « %S » es activat sus %S.
-pluginInfo.unknownPlugin=Desconegut
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
@@ -232,8 +228,6 @@ tabHistory.goForward=Tornar a aquesta pagina
 pasteAndGo.label=Pegar e anar
 
 # Block autorefresh
-refreshBlocked.goButton=Autorizar
-refreshBlocked.goButton.accesskey=A
 refreshBlocked.refreshLabel=%S a empachat lo recargament automatic d'aquesta pagina.
 refreshBlocked.redirectLabel=%S a empachat la redireccion automatica cap a una autra pagina.
 
@@ -271,20 +265,11 @@ newTabButton.tooltip=Dobrir un onglet novèl (%S)
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
-offlineApps.allow=Autorizar
-offlineApps.allowAccessKey=Autorizar
 offlineApps.never=Pas jamai per aqueste site
-offlineApps.neverAccessKey=e
 offlineApps.notNow=Pas ara
-offlineApps.notNowAccessKey=Pas per aqueste còp
 
 offlineApps.usage=Aqueste site web (%S) conserva ara mai de %S Mo de donadas sus vòstre ordenador per una utilizacion fòra connexion.
 offlineApps.manageUsage=Afichar los paramètres
-offlineApps.manageUsageAccessKey=V
-
-# LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
-# %2$S a number of megabytes.
-indexedDB.usage=Aqueste site (%1$S) ensaja d'emmagazinar mai de %2$S Mo de donadas sus vòstre ordenador per una utilizacion fòra connexion.
 
 identity.identified.verifier=Verificat per : %S
 identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat per aqueste site
@@ -303,7 +288,6 @@ identity.chrome=Aquò es una pagina securizada de %S.
 editBookmarkPanel.pageBookmarkedTitle=Pagina marcada
 editBookmarkPanel.pageBookmarkedDescription=%S se remembrarà totjorn d'aquesta pagina per vos.
 editBookmarkPanel.bookmarkedRemovedTitle=Marcapaginas suprimit
-editBookmarkPanel.editBookmarkTitle=Modificar aqueste marcapaginas
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -325,30 +309,22 @@ puAlertText=Clicar aicí per aver de detalhs
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.alwaysShareLocation geolocation.neverShareLocation):
 #If you're having trouble with the word Share, please use Allow and Block in your language.
 geolocation.shareLocation=Partejar sa localizacion
-geolocation.shareLocation.accesskey=P
+geolocation.shareLocation.accesskey=a
 geolocation.alwaysShareLocation=Partejar totjorn sa localizacion
-geolocation.alwaysShareLocation.accesskey=T
 geolocation.neverShareLocation=Partejar pas jamai sa localizacion
-geolocation.neverShareLocation.accesskey=N
 geolocation.shareWithSite=Volètz partejar vòstra localizacion amb %S ?
 geolocation.shareWithFile=Volètz partejar vòstra localizacion amb lo fichièr %S ?
 
 webNotifications.showForSession=Afichar per aquesta sesilha
-webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow=Afichar totjorn las notificacions
-webNotifications.alwaysShow.accesskey=A
 webNotifications.neverShow=Blocar totjorn las notificacions\u0020
-webNotifications.neverShow.accesskey=N
 webNotifications.showFromSite=Volètz afichar las notificacions dempuèi %S ?
 
 # Pointer lock UI
 
 pointerLock.allow2=Amagar lo puntador
-pointerLock.allow2.accesskey=H
 pointerLock.alwaysAllow=Autorizar totjorn a l'amagar
-pointerLock.alwaysAllow.accesskey=A
 pointerLock.neverAllow=Autorizar pas jamai a l'amagar
-pointerLock.neverAllow.accesskey=N
 pointerLock.title2=Volètz autorizar l'amagatge del puntador sus %S ?
 pointerLock.autoLock.title2=%S amagarà lo puntador.
 
@@ -395,12 +371,12 @@ safeModeRestartPromptMessage=Sètz segur que volètz desactivar totes los moduls
 safeModeRestartButton=Tornar aviar
 
 # LOCALIZATION NOTE (browser.menu.showCharacterEncoding): Set to the string
-# "true" (spelled and capitalized exactly that way) to show the "Character
+# "true" (spelled and capitalized exactly that way) to show the "Text
 # Encoding" menu in the main Firefox button on Windows. Any other value will
-# hide it. Regardless of the value of this setting, the "Character Encoding"
+# hide it. Regardless of the value of this setting, the "Text Encoding"
 # menu will always be accessible via the "Web Developer" menu.
 # This is not a string to translate; it just controls whether the menu shows
-# up in the Firefox button. If users frequently use the "Character Encoding"
+# up in the Firefox button. If users frequently use the "Text Encoding"
 # menu, set this to "true". Otherwise, you can leave it as "false".
 browser.menu.showCharacterEncoding=fals
 
@@ -412,7 +388,6 @@ syncPromoNotification.bookmarks.description=Podètz accedir a vòstres marcapagi
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
 syncPromoNotification.passwords.description=Podètz accedir a vòstres senhals sus totes vòstres aparelhs gràcias a %S.\u0020
-syncPromoNotification.learnMoreLinkText=Ne saber mai
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
@@ -429,9 +404,10 @@ dataReportingNotification.message       = %1$S manda automaticament d'unas infor
 dataReportingNotification.button.label  = Causir çò que mandi
 dataReportingNotification.button.accessKey  = C
 
+# Process hang reporter
+
 # Webapps notification popup
 webapps.install = Installar
-webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Volètz installar « %1$S » a partir del site (%2$S) ?
 webapps.install.success = Aplicacion installada
@@ -541,19 +517,40 @@ getUserMedia.stopSharing.accesskey = s
 #                    getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen,
 #                    getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuBrowser,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraMicrophoneBrowser,
 #                    getUserMedia.sharingMenuCameraApplication,
 #                    getUserMedia.sharingMenuCameraScreen,
 #                    getUserMedia.sharingMenuCameraWindow,
+#                    getUserMedia.sharingMenuCameraBrowser,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
-#                    getUserMedia.sharingMenuMicrophoneWindow):
+#                    getUserMedia.sharingMenuMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneBrowser):
 # %S is the website origin (e.g. www.mozilla.org)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentPlaying.message2): %S is brandShortName.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentDisabled.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentDisabled.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMInsufficientVersion.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMInstalling.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.64bit.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.unsupportedOS.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S is the name of the user's OS (Windows, Linux, Mac OS X), %3$S will be the 'learn more' link
+
+
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S sembla lent… d'… aviar.
@@ -562,6 +559,7 @@ slowStartup.helpButton.accesskey = l
 slowStartup.disableNotificationButton.label = M'avertir pas mai
 slowStartup.disableNotificationButton.accesskey = a
 
+# LOCALIZATION NOTE  - %S is brandShortName
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
@@ -575,3 +573,52 @@ customizeTips.tip0.learnMore = Ne saber mai
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartBrowserButton.label = Tornar aviar %S
+
+# LOCALIZATION NOTE : FILE Reading List and Reader View are feature names and therefore typically used as proper nouns.
+
+# Pre-landed string for bug 1124153
+# LOCALIZATION NOTE(readingList.sidebar.showMore.tooltip): %S is the number of items that will be added by clicking this button
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Pre-landed strings for bug 1131457 / bug 1131461
+# Pre-landed strings for bug 1133610 & bug 1133611
+# LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
+# LOCALIZATION NOTE(readingList.promo.noSync.link): %S is syncBrandShortName
+# LOCALIZATION NOTE(readingList.promo.hasSync.label): %S is syncBrandShortName
+
+# Pre-landed strings for bug 1136570
+readingList.promo.firstUse.exitTourButton = Tampar
+# LOCALIZATION NOTE(readingList.promo.firstUse.tourDoneButton):
+# » is used as an indication that pressing this button progresses through the tour.
+# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.multipleStepsTitle):
+# This is used when there are multiple steps in the tour.
+# %1$S is the current step's title (readingList.promo.firstUse.*.title), %2$S is the current step number of the tour, %3$S is the total number of steps.
+# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+# LOCALIZATION NOTE(readingList.promo.firstUse.readerView.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.body): %S is brandShortName
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.body): %S is brandShortName
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+
+# Pre-landed strings for bug 1136570
+# LOCALIZATION NOTE(readingList.prepopulatedArticles.learnMore):
+# This will show as an item in the Reading List, and will link to a page that explains and shows how the Reading List and Reader View works.
+# This will be staged at:
+#   https://www.allizom.org/firefox/reading/start/
+# And eventually available at:
+#   https://www.mozilla.org/firefox/reading/start/
+# %S is brandShortName
+# LOCALIZATION NOTE(readingList.prepopulatedArticles.supportReadingList):
+# This will show as an item in the Reading List, and will link to a SUMO article describing the Reading List:
+#   https://support.mozilla.org/kb/save-sync-and-read-pages-anywhere-reading-list
+# LOCALIZATION NOTE(readingList.prepopulatedArticles.supportReaderView):
+# This will show as an item in the Reading List, and will link to a SUMO article describing the Reader View:
+#   https://support.mozilla.org/kb/enjoy-clutter-free-web-pages-reader-view
+# LOCALIZATION NOTE(readingList.prepopulatedArticles.learnMore):
+# This will show as an item in the Reading List, and will link to a SUMO article describing Sync:
+#   https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync
+# %S is syncBrandShortName
