--- a/browser/chrome/browser/devtools/toolbox.properties
+++ b/browser/chrome/browser/devtools/toolbox.properties
@@ -70,6 +70,14 @@ browserConsoleCmd.commandkey=VK_F4
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Seleccionar un element de la pagina
 
+# LOCALIZATION NOTE (sidebar.showAllTabs.label)
+# This is the label shown in the show all tabs button in the tabbed side
+# bar, when there's no enough space to show all tabs at once
+
+# LOCALIZATION NOTE (sidebar.showAllTabs.tooltip)
+# This is the tooltip shown when hover over the '…' button in the tabbed side
+# bar, when there's no enough space to show all tabs at once
+
 # LOCALIZATION NOTE (options.darkTheme.label)
 # Used as a label for dark theme
 options.darkTheme.label=Tèma escur
