--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -7,46 +7,36 @@
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
 
+
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
 first_time_experience_button_label=Per començar
 
 
-## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Click the label icon at the end of the url field.
-## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
-## the expiry time. Click the label icon at the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
-## the expiry time. Click the label icon are the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-
 # Status text
 
 # Error bars
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
-## These may be displayed at the top of the panel here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+## These may be displayed at the top of the panel.
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Tornar ensajar
 
+## LOCALIZATION NOTE (share_email_subject_context): This is the alternate email
+## subject when a conversation is shared with a context attached.
+## {{clientShortName2}} will be replaced with the respective string in this file.
+## {{title}} will be replaced with the title of an HTML document.
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
-## part between {{..}} and leave the \r\n\r\n part alone
-share_button=Corrièr electronic
-share_button2=Mandar lo ligam per mail
-copy_url_button=Copiar
+## part between {{..}} and leave the \n\n part alone
+## LOCALIZATION NOTE (share_email_body_context): In this item, don't translate
+## the part between {{..}} and leave the \n\n part alone.
+## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
+## between {{..}}. Please keep the text below 117 characters to make sure it fits
+## in a tweet.
+
+## LOCALIZATION NOTE (share_panel_body): In this item, don't translate the part
+## between {{..}}.
 
 
 settings_menu_item_signin=Connexion
@@ -54,46 +44,42 @@ settings_menu_item_signin=Connexion
 # Contact Strings (Panel)
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
-## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## the search field.
 contacts_search_placesholder=Recercar...
 
 ## LOCALIZATION NOTE (new_contact_button): This is the button to open the
 ## new contact sub-panel.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-## for where this appears on the UI
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-## and click the 'New Contact' button to see the fields.
+## These are the placeholders for the fields for entering a new contact. Click
+## the 'New Contact' button to see the fields.
 
 
 ## LOCALIZATION NOTE (add_contact_button):
-## This is the button to actually add the new contact
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-## and click the 'New Contact' button to see the fields.
+## This is the button to actually add the new contact. Click the 'New Contact'
+## button to see the fields.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
 valid_email_text_description=Picatz una adreça electronica valida
 
-## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
-## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-## for where these appear on the UI
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the
+## panel.
 import_contacts_button=Importar
 importing_contacts_progress_button=Importacion...
+## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
+## when user's contacts have been successfully imported.
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
-## contacts fails. This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+## contacts fails. This is displayed in the error field.
 import_failed_support_button=Ajuda
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Sètz segur(a) que volètz suprimir aqueste contracte ?
@@ -103,35 +89,33 @@ confirm_delete_contact_cancel_button=Anullar
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
-## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## the user.
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
-## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## to call the user.
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 edit_contact_name_label=Nom
 edit_contact_email_label=Corrièr electronic
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 edit_contact_done_button=Acabat
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+
+## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
+## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_button_nothanks=Non, mercé
 
 # Conversation Window Strings
 
@@ -142,19 +126,16 @@ hangup_button_caption2=Quitar
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 
 # Outgoing conversation
 
 initiate_audio_video_call_button2=Aviar
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
-## whilst the client is contacting the client at the other end of the connection
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+## whilst the client is contacting the client at the other end of the connection.
 call_progress_connecting_description=Connexion…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 
 
 ## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
@@ -162,16 +143,13 @@ call_progress_connecting_description=Connexion…
 ## because this will be replaced by the contact's name.
 
 
-## LOCALIZATION NOTE (contact_offline_title): Title for
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
-## displayed when the contact is offline.
-## LOCALIZATION NOTE (call_timeout_notification_text): Title for
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
-## displayed when the call didn't go through.
+## LOCALIZATION NOTE (contact_offline_title): Title which is displayed when the
+## contact is offline.
+## LOCALIZATION NOTE (call_timeout_notification_text): Title which is displayed
+## when the call didn't go through.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
-## These buttons are displayed when a call has failed:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## These buttons are displayed when a call has failed.
 
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
@@ -191,7 +169,6 @@ powered_by_afterLogo=
 ## In this item, don't translate the part between {{..}}
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 
@@ -205,3 +182,17 @@ rooms_leave_button_label=Quitar
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
 rooms_list_deleteConfirmation_label=Sètz segur ?
+
+# Infobar strings
+
+infobar_button_gotit_label=Ai comprés !
+
+# Context in conversation strings
+# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
+# title/URL of the website you are having a conversation about, displayed on a
+# separate line. If this structure doesn't work for your locale, you might want
+# to consider this as a stand-alone title. See example screenshot:
+# https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
+## by the title of the active tab, also known as the title of an HTML document.
+## The quotes around the title are intentional.
