--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -33,3 +33,4 @@ malwareBlocked=The site at %S has been reported as an attack site and has been b
 phishingBlocked=Lo site Web sus %S es estat senhalat coma una contrafaiçon concebuda per enganar los utilizaires per que partejen d'informacions personalas o financièras.
 corruptedContentError=La pagina qu'ensajatz de veire pòt pas èsser afichada perque una error dins la transmission de donadas es estada detectada.
 remoteXUL=Aquesta pagina utiliza una anciana tecnologia qu'es pas mai disponibla per defaut.
+## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
