--- a/dom/chrome/accessibility/mac/accessible.properties
+++ b/dom/chrome/accessibility/mac/accessible.properties
@@ -25,6 +25,7 @@ tab     =       tabulacion
 # The Role Description for definition list dl, dt and dd
 term    =       tèrme
 definition =    definicion
+# The Role Description for an input type="search" text field
 # The Role Description for WAI-ARIA Landmarks
 search  =       recercar
 banner  =       bandièra
