--- a/dom/chrome/plugins.properties
+++ b/dom/chrome/plugins.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # LOCALIZATION NOTE (plugins.properties):
-#    Those strings are inserted into an HTML page, so you all HTML characters
+#    Those strings are inserted into an HTML page, so all HTML characters
 #    have to be escaped in a way that they show up correctly in HTML!
 
 title_label=A prepaus dels moduls
@@ -19,4 +19,8 @@ state_disabled=Desactivat
 mimetype_label=Tipe MIME
 description_label=Descripcion
 suffixes_label=Sufixes
+learn_more_label=Ne saber mai
+
+# GMP Plugins
+
 
