--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -12,6 +12,8 @@ rememberPasswordMsg = Volètz enregistrar lo senhal per « %1$S » sus %2$S ?
 # LOCALIZATION NOTE (rememberPasswordMsgNoUsername):
 # String is the login's hostname.
 rememberPasswordMsgNoUsername = Volètz enregistrar lo senhal per %S ?
+# LOCALIZATION NOTE (noUsernamePlaceholder):
+# This is displayed in place of the username when it is missing.
 notNowButtonText = &Pas ara
 notifyBarNotNowButtonText = Pas ara
 notifyBarNotNowButtonAccessKey = P
